==> Bridgetek/EVE-MCU-BRT_AN_025/ports/eve_arch_stm32/EVE_MCU_STM32CUBE.c <==
/**
 * @file EVE_MCU_STM32CUBE.c
 * @details MCU-specific code for controlling EVE on STM32 devices.
 */
/*
 * ============================================================================
 * (C) Copyright,  Bridgetek Pte. Ltd.
 * ============================================================================
 *
 * This source code ("the Software") is provided by Bridgetek Pte Ltd
 * ("Bridgetek") subject to the licence terms set out
 * http://brtchip.com/BRTSourceCodeLicenseAgreement/ ("the Licence Terms").
 * You must read the Licence Terms before downloading or using the Software.
 * By installing or using the Software you agree to the Licence Terms. If you
 * do not agree to the Licence Terms then do not download or use the Software.
 *
 * Without prejudice to the Licence Terms, here is a summary of some of the key
 * terms of the Licence Terms (and in the event of any conflict between this
 * summary and the Licence Terms then the text of the Licence Terms will
 * prevail).
 *
 * The Software is provided "as is".
 * There are no warranties (or similar) in relation to the quality of the
 * Software. You use it at your own risk.
 * The Software should not be used in, or for, any medical device, system or
 * appliance. There are exclusions of Bridgetek liability for certain types of loss
 * such as: special loss or damage; incidental loss or damage; indirect or
 * consequential loss or damage; loss of income; loss of business; loss of
 * profits; loss of revenue; loss of contracts; business interruption; loss of
 * the use of money or anticipated savings; loss of information; loss of
 * opportunity; loss of goodwill or reputation; and/or loss of, damage to or
 * corruption of data.
 * There is a monetary cap on Bridgetek's liability.
 * The Software may have subsequently been amended by another user and then
 * distributed by that other user ("Adapted Software").  If so that user may
 * have additional licence terms that apply to those amendments. However, Bridgetek
 * has no liability in relation to those amendments.
 * ============================================================================
 */

// Guard against being used for incorrect platform or architecture.
#if defined(PLATFORM_STM32_CUBE)

#pragma message "Compiling " __FILE__ " for ST STM32_CUBE"

/* EVE MCU HEADER */

/* Header for STM32 (generated by STMCubeMX) */
#include <main.h>

#include <string.h>
#include <stdint.h> // For Uint8/16/32 and Int8/16/32 data types
#include <machine/endian.h>

/* Include EVE-MCU-Dev library */
#include <EVE.h>
/* Include functions for EVE-MCU-Dev library MCU layer */
#include <MCU.h>

/* EVE MCU HEADER END */

/* EVE MCU */

// This is the STM32 platform specific section and contains the functions which
// enable the GPIO and SPI interfaces.

void MCU_Delay_20ms(void)
{
    HAL_Delay(20);
}

void MCU_Delay_500ms(void)
{
    uint8_t dly = 0;

    for(dly =0; dly < 100; dly++)
    {
        HAL_Delay(20);
    }
}

uint32_t MCU_Time_ms(void)
{
    return HAL_GetTick();
}

/* EVE_PD__Pin and EVE_PD__GPIO_Port are defined by STM32CubMX.
 * The "User Label" for the PD pin is set to "EVE PD#" in the
 * GPIO Mode and Configuration section.
 */

inline void MCU_PDlow(void)
{
    // PD# line low
    HAL_GPIO_WritePin(EVE_PD__GPIO_Port, EVE_PD__Pin, GPIO_PIN_RESET);
}

inline void MCU_PDhigh(void)
{
    // PD# line high
    HAL_GPIO_WritePin(EVE_PD__GPIO_Port, EVE_PD__Pin, GPIO_PIN_SET);
}

int MCU_Int(void)
{
    // INT# line
    return HAL_GPIO_ReadPin(EVE_INT__GPIO_Port, EVE_INT__Pin);
}

// STM32 is Little Endian. There is no sys/endian.h.
// Use toolchain defined functions.

uint16_t MCU_htobe16(uint16_t h)
{
    return __bswap16(h);
}

uint32_t MCU_htobe32(uint32_t h)
{
    return __bswap32(h);
}

uint16_t MCU_htole16(uint16_t h)
{
    return h;
}

uint32_t MCU_htole32(uint32_t h)
{
    return h;
}

uint16_t MCU_be16toh(uint16_t h)
{
    return __bswap16(h);
}

uint32_t MCU_be32toh(uint32_t h)
{
    return __bswap32(h);
}

uint16_t MCU_le16toh(uint16_t h)
{
    return h;
}

uint32_t MCU_le32toh(uint32_t h)
{
    return h;
}

/* EVE MCU END */

#endif /* defined (PLATFORM_STM32_CUBE) */
